# dogs-color

./: Cargo.toml  README.md
experiments/: cgshop_clique_pwls.experiment.json  cgshop_clique_tabu.experiment.json  cgshop_coloring_cwls.experiment.json  cgshop_coloring_pwls.experiment.json  cgshop_dsatur.experiment.json  cgshop_example.experiment.json  cgshop_example_aog.experiment.json  cgshop_og.experiment.json  cgshop_tabucol.experiment.json  dimacs_bench.json  evolution.csv  extract_colorings_instances.py  generate_csv_from_rwls.py  results.csv  results.ods  solver_results.csv
experiments/2021_11_12_cwls/: reecn11799.instance.json.cwls.solution.json  reecn15355.instance.json.cwls.solution.json  reecn16388.instance.json.cwls.solution.json  reecn17244.instance.json.cwls.solution.json  reecn18615.instance.json.cwls.solution.json  reecn32569.instance.json.cwls.solution.json  reecn3382.instance.json.cwls.solution.json  reecn39476.instance.json.cwls.solution.json  reecn3988.instance.json.cwls.solution.json  reecn45823.instance.json.cwls.solution.json  reecn53304.instance.json.cwls.solution.json  reecn63079.instance.json.cwls.solution.json  reecn6910.instance.json.cwls.solution.json  reecn69952.instance.json.cwls.solution.json  (+96 more)
insts/: cgshop22.csv  cgshop_22_examples.csv  dimacs.csv  gen_initial_cliques.py  gen_initial_colorings.py  generate_instance_stats.py  test1
src/: backtracking_dsatur.rs  cgshop.rs  cgshop_dsatur.rs  color.rs  compact_instance.rs  dimacs.rs  dsatur.rs  lib.rs  main.rs  main_args.yml  partialcol.rs  tabucol.rs  util.rs
tmp/: README.md
(+4613 files in other folders)
