[package]
name = "dogs-color"
version = "1.0.0"
authors = ["Luc Libralesso <libralesso.l@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dogs = "1.0.0"
dogs = { path = "../dogs" }
clap = {version="2.33.3", features=["yaml"]}
bit-set = "0.5.2"
ordered-float = "2.0.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
nom = "6.2.1"
rand = "0.8.4"

[profile.release]
debug = true # to be removed eventually
#### optimizations for faster run (compile-time longer)
# lto = "fat" # optimize over all crates at once (more program speed, longer compile time)
# codegen-units = 1 # do not split to compile faster (more program speed, longer compile time)
# target-cpu="native" # optimizes for this cpu
# panic = "abort" # better cache usage related to panics

[profile.test]
opt-level=3 # optimized for quick test on performance (should not be used by default)

# solver programs
[[bin]]
name = "greedy_dsatur"
path = "src/bin/greedy_dsatur.rs"
